--- a/templates/cars.html
+++ b/templates/cars.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Vehicle History</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     {% for car in cars %}
         {{ car.vehicle_name }}<br>
         {{ car.make }}<br>
@@ -16,5 +9,4 @@
         {{ car.year }}<br>
         {{ car.current_owner }}<br>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
