--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                             <a class="nav-link" href="#">Sign In</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         </li>
                     </ul>
                 </div>
