--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 
-   <div class="row">
-      <form>
-        <div class="card">
-            <div class="card-body">
-                This is some text within a card body.
+    <div class="container">
+        <h3>Register</h3>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <form method="POST" action="{{ url_for('register') }}">
+                    <div class="card">
+                        <div class="card-body ">
+                            <!-- username -->
+                            <div class="mb-3">
+                                <i class="fas fa-user-plus prefix"></i>
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" placeholder="Enter username..." required>
+                            </div>
+                            <!-- password -->
+                            <div class="mb-3">
+                                <i class="fas fa-user-lock prefix"></i>
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter password..." required>
+                            </div>
+                            <!-- register -->
+                            <div class="mb-3 text-center text-shadow">
+                                <input class="btn btn-primary btn-lg" type="submit" value="Register">
+                                <i class="fas fa-sign-in-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-      </form>
-   </div>
-
+    </div>
 {% endblock %}
