--- a/templates/register.html
+++ b/templates/register.html
@@ -12,13 +12,15 @@
                             <div class="mb-3">
                                 <i class="fas fa-user-plus prefix"></i>
                                 <label for="username" class="form-label">Username</label>
-                                <input type="text" class="form-control" id="username" placeholder="Enter username..." required>
+                                <input type="text" class="form-control" id="username" name="username" minlength="5"
+                                   maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Enter username..." required>
                             </div>
                             <!-- password -->
                             <div class="mb-3">
                                 <i class="fas fa-user-lock prefix"></i>
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter password..." required>
+                                <input type="password" class="form-control" id="password" name="password" minlength="5"
+                                   maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Enter password..." required>
                             </div>
                             <!-- register -->
                             <div class="mb-3 text-center text-shadow">
