--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#">Sign Out</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sign In</a>
+                            <a class="nav-link" href="{{ url_for('sign_in') }}">Sign In</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
