--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -2,15 +2,15 @@
 {% block content %}
 
     <div class="container">
-        <h3>Register</h3>
+        <h3>Sign In</h3>
         <div class="row justify-content-center">
             <div class="col-6">
-                <form method="POST" action="{{ url_for('register') }}">
+                <form method="POST" action="{{ url_for('sign_in') }}">
                     <div class="card">
                         <div class="card-body ">
                             <!-- username -->
                             <div class="mb-3">
-                                <i class="fas fa-user-plus prefix"></i>
+                                <i class="fas fa-user-cog prefix"></i>
                                 <label for="username" class="form-label">Username</label>
                                 <input type="text" class="form-control" id="username" name="username" minlength="5"
                                    maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Enter username..." required>
@@ -22,9 +22,9 @@
                                 <input type="password" class="form-control" id="password" name="password" minlength="5"
                                    maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" placeholder="Enter password..." required>
                             </div>
-                            <!-- register -->
+                            <!-- sign in -->
                             <div class="mb-3 text-center text-shadow">
-                                <input class="btn btn-primary btn-lg" type="submit" value="Register">
+                                <input class="btn btn-primary btn-lg" type="submit" value="Sign In">
                                 <i class="fas fa-sign-in-alt"></i>
                             </div>
                         </div>
@@ -33,8 +33,8 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <p>
-                            Already Registered?
-                            <a href="{{ url_for('sign_in') }}">Sign In</a>
+                            Sign Up Here...
+                            <a href="{{ url_for('register') }}">Register Account</a>
                         </p>
                     </div>
                 </div>
