Change file and function names  for clarity

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
         
     
     {% for car in cars %}
-    <div class="card shadow p-3 mb-5 bg-body-tertiary rounded" id="card">
+    <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
         <div class="card-body">
             <h4 class="card-title text-shadow">{{ car.make }}</h4>
             <h5 class="card-subtitle mb-2 text-body-secondary">{{ car.model }}</h5>
