--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Add New Vehicle</a>
+                                <a class="nav-link" href="{{ url_for('add_new_vehicle') }}">Add New Vehicle</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('sign_out') }}">Sign Out</a>
