--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -5,15 +5,15 @@
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="">
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Select Vehicle Type
-                    </button>
-                    <ul class="dropdown-menu" id="vehicle_type" name="vehicle_type">
+                <div class="mb-3 col-12">
+                    <i class="fa-solid fa-pen"></i>
+                    <label for="vehicle_type" class="form-label">Vehicle Type</label>
+                    <select id="vehicle_type" name="vehicle_type" class="form-select" aria-label="Default select example" required>
+                        <option selected>Select Vehicle Type...</option>
                         {% for vehicle in vehicles %}
-                        <li><a class="dropdown-item" href="{{ vehicle_type.vehicle_type }}">something{{ vehicle_type.vehicle_type }}</a></li>
+                        <option value="{{ vehicle.vehicle_type }}">{{ vehicle.vehicle_type }}</option>
                         {% endfor %}
-                    </ul>
+                    </select>
                 </div>
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-pen"></i>
@@ -29,15 +29,15 @@
                 </div>
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-pen"></i>
-                    <label for="capacity" class="form-label">Engine Capacity</label>
-                    <input type="text" class="form-control" id="capacity" name="capacity"
-                     minlength="1" maxlength="25" placeholder="Enter Engine Capapcity..." required>
+                    <label for="capacity" class="form-label">Engine Capacity (Litres/CC)</label>
+                    <input type="number" class="form-control" id="capacity" name="capacity"
+                     min="1" max="9999" value="" required>
                 </div>
                 <div class="mb-3 col-12">
                     <i class="fa-regular fa-calendar-days"></i>
                     <label for="year" class="form-label">Year Of Manufacture</label>
-                    <input type="text" class="form-control" id="year" name="year" minlength="2" maxlength="4"
-                        placeholder="Enter Year Of Manufacture.." required>
+                    <input type="number" class="form-control" id="year" name="year" min="1885" max="2026"
+                        value="" required>
                 </div>
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-palette"></i>
