--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -4,7 +4,8 @@
     <h3>Add New Vehicle</h3>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <form class="justify-content-center" method="POST" action="">
+            <form class="justify-content-center" method="POST" action="{{ url_for('add_new_vehicle') }}">
+                <!-- vehicle type -->
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-pen"></i>
                     <label for="vehicle_type" class="form-label">Vehicle Type</label>
@@ -15,45 +16,56 @@
                         {% endfor %}
                     </select>
                 </div>
+                <!-- vehicle make -->
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-pen"></i>
                     <label for="make" class="form-label">Vehicle Make</label>
                     <input type="text" class="form-control" id="make" name="make"
                     minlength="4" maxlength="25" placeholder="Enter make of vehicle..." required>
                 </div>
+                <!-- vehicle model -->
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-pen"></i>
                     <label for="model" class="form-label">Model</label>
                     <input type="text" class="form-control" id="model" name="model"
                      placeholder="Enter model..." minlength="1" maxlength="25" required>
                 </div>
+                <!-- engine capacity -->
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-pen"></i>
                     <label for="capacity" class="form-label">Engine Capacity (Litres/CC)</label>
                     <input type="number" class="form-control" id="capacity" name="capacity"
-                     min="1" max="9999" value="" required>
+                     min="1" max="9999" step="0.1" value="" required>
                 </div>
+                <!-- year of manufacture -->
                 <div class="mb-3 col-12">
                     <i class="fa-regular fa-calendar-days"></i>
                     <label for="year" class="form-label">Year Of Manufacture</label>
                     <input type="number" class="form-control" id="year" name="year" min="1885" max="2026"
                         value="" required>
                 </div>
+                <!-- colour -->
                 <div class="mb-3 col-12">
                     <i class="fa-solid fa-palette"></i>
                     <label for="colour" class="form-label">Colour</label>
                     <input type="text" class="form-control" id="colour" name="colour" minlength="3" maxlength="20"
                         placeholder="Enter Colour..." required>
                 </div>
+                <!-- current owner switch -->
                 <div class="mb-3 form-check form-switch">
                     <label class="form-check-label" for="current_owner">Current Owner</label>
                     <input class="form-check-input" type="checkbox" role="switch" id="current_owner">
                     <i class="fa-solid fa-key"></i>
                 </div>
+                <!-- show my car switch -->
                 <div class="form-check form-switch">
                     <label class="form-check-label" for="show_my_car">Show My Car</label>
                     <input class="form-check-input" type="checkbox" role="switch" id="show_my_car">
                     <i class="fa-solid fa-car-side"></i>
+                </div>
+                <!-- submit button -->
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Submit form</button>
                 </div>
             </form>
         </div>
