--- a/templates/home.html
+++ b/templates/home.html
@@ -3,21 +3,23 @@
     
     <h3>User's Vehicles</h3>
 
-    {% for car in cars %}
-        {% if car.show_my_car == "yes" %}
+    {% for vehicle in vehicles %}
+        {% if vehicle.show_my_vehicle == "yes" %}
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <div class="card-body">
-                <h4 class="card-title text-shadow">{{ car.make }}</h4>
-                <h5 class="card-subtitle mb-2 text-body-secondary">{{ car.model }}</h5>
-                <p class="card-text">Engine Capacity: {{ car.capacity }} L</p>
-                <p class="card-text">Colour: {{ car.colour }}</p>
-                <p class="card-text">Year: {{ car.year }}</p>
-                {% if car.current_owner == "yes" %}
-                <p class="card-text">Current Owner: {{ car.current_owner }}
+                <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
+                <h5 class="card-subtitle mb-2 text-body-secondary">{{ vehicle.model }}</h5>
+                <p class="card-text">Engine Capacity: {{ vehicle.capacity }} L</p>
+                <p class="card-text">Colour: {{ vehicle.colour }}</p>
+                <p class="card-text">Year: {{ vehicle.year }}</p>
+                {% if vehicle.current_owner == "yes" %}
+                <p class="card-text">Current Owner: {{ vehicle.current_owner }}
                     <i class="fa-solid fa-check"></i>
                 </p>
                 {% endif %}
-                <p><em>by: {{ car.created_by }}</em></p>
+                <p><em>by: {{ vehicle.created_by }}</em></p>
+                <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit</a>
+                <button type="button" class="btn btn-danger btn-sm">Delete</button>
             </div>
         </div>
         {% endif %}
