Bind data to the edit vehicle form

--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -74,7 +74,7 @@
                 <!-- show my vehicle switch -->
                 <div class="row">
                     <div class="form-check form-switch">
-                        <label class="form-check-label" for="show_my_car">Show My Vehicle</label>
+                        <label class="form-check-label" for="show_my_vehicle">Show My Vehicle</label>
                         <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
                         <i class="fa-solid fa-car-side"></i>
                     </div>
