--- a/templates/home.html
+++ b/templates/home.html
@@ -18,8 +18,10 @@
                 </p>
                 {% endif %}
                 <p><em>by: {{ vehicle.created_by }}</em></p>
-                <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit</a>
-                <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                <!-- edit button -->
+                <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit <i class="fa-solid fa-pen"></i></a>
+                <!-- delete button -->
+                <button type="button" class="btn btn-danger btn-sm">Delete <i class="fa-regular fa-circle-xmark"></i></button>
             </div>
         </div>
         {% endif %}
