--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -4,7 +4,7 @@
     <h3>Edit Vehicle</h3>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <form class="justify-content-center" method="POST" action="{{ url_for('edit_vehicle', vehicle_id=vehicles._id) }}">
+            <form class="justify-content-center" method="POST" action="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}">
                 <!-- vehicle type -->
                 <div class="row"></div>
                     <div class="mb-3 col-12">
