--- a/templates/home.html
+++ b/templates/home.html
@@ -19,9 +19,11 @@
                 {% endif %}
                 <p><em>by: {{ vehicle.created_by }}</em></p>
                 <!-- edit button -->
-                <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit <i class="fa-solid fa-pen"></i></a>
-                <!-- delete button -->
-                <button type="button" class="btn btn-danger btn-sm">Delete <i class="fa-regular fa-circle-xmark"></i></button>
+                {% if session.user|lower == vehicle.created_by|lower %}
+                    <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit <i class="fa-solid fa-pen"></i></a>
+                    <!-- delete button -->
+                    <button type="button" class="btn btn-danger btn-sm">Delete <i class="fa-regular fa-circle-xmark"></i></button>
+                {% endif %}
             </div>
         </div>
         {% endif %}
