--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,8 @@
                 {% if session.user|lower == vehicle.created_by|lower %}
                     <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit <i class="fa-solid fa-pen"></i></a>
                     <!-- delete button -->
-                    <button type="button" class="btn btn-danger btn-sm">Delete <i class="fa-regular fa-circle-xmark"></i></button>
+                    <a class="btn btn-danger btn-sm" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}" role="button">Delete <i
+                            class="fa-solid fa-pen"></i></a>
                 {% endif %}
             </div>
         </div>
