Add manage vehicle types functionality

--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -82,7 +82,7 @@
                 <!-- submit button -->
                 <div class="row">
                     <div class="col-12">
-                        <button class="btn btn-primary" type="submit">Submit form</button>
+                        <button class="btn btn-primary" type="submit">Add Vehicle</button>
                     </div>
                 </div>
             </form>
