--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -96,7 +96,7 @@
                         <!-- cancel button -->
                         <a class="btn btn-danger" href="{{ url_for('get_vehicles') }}" role="button">Cancel <i class="fa-regular fa-circle-xmark"></i></a>
                         <!-- edit button -->
-                        <button class="btn btn-primary" type="submit">Edit Vehicle <i class="fa-solid fa-pen"></i></button>
+                        <button class="btn btn-primary" type="submit">Save Changes <i class="fa-solid fa-pen"></i></button>
                     </div>
                 </div>
             </form>
