--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -20,7 +20,7 @@
                         <a class="btn btn-primary" href="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Edit <i
                                 class="fa-solid fa-pen"></i></a>
                         <!-- delete button -->
-                        <a class="btn btn-danger btn-sm" href="" role="button">Delete <i
+                        <a class="btn btn-danger btn-sm" href="{{ url_for('delete_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Delete <i
                                 class="fa-solid fa-pen"></i></a>
                     </div>
                 </div>
