--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,5 +13,34 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            {% for vehicle in vehicles %}
+                {% if session.user|lower == vehicle.created_by|lower %}
+                    <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+                        <div class="card-body">
+                            <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
+                            <h5 class="card-subtitle mb-2 text-body-secondary">{{ vehicle.model }}</h5>
+                            <p class="card-text">Engine Capacity: {{ vehicle.capacity }} L</p>
+                            <p class="card-text">Colour: {{ vehicle.colour }}</p>
+                            <p class="card-text">Year: {{ vehicle.year }}</p>
+                            {% if vehicle.current_owner == "yes" %}
+                            <p class="card-text">Current Owner: {{ vehicle.current_owner }}
+                                <i class="fa-solid fa-check"></i>
+                            </p>
+                            {% endif %}
+                            <p><em>by: {{ vehicle.created_by }}</em></p>
+                            <!-- edit button -->
+                            {% if session.user|lower == vehicle.created_by|lower %}
+                            <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit <i
+                                    class="fa-solid fa-pen"></i></a>
+                            <!-- delete button -->
+                            <a class="btn btn-danger btn-sm" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}"
+                                role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
+                            {% endif %}
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
