--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -47,6 +47,36 @@
                         <input type="number" class="form-control" id="capacity" name="capacity"
                         min="1" max="9999" step="0.1" value="{{ vehicle.capacity}}" required>
                     </div>
+                    {% if vehicle.litre_cc == "Litre" %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre" checked>
+                        <label class="form-check-label" for="litre_cc">
+                            Litre
+                        </label>
+                    </div>
+                    {% else %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre">
+                        <label class="form-check-label" for="litres_cc">
+                            Litre
+                        </label>
+                    </div>
+                    {% endif %}
+                    {% if vehicle.litre_cc == "CC" %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="CC" checked>
+                        <label class="form-check-label" for="litre_cc">
+                            CC
+                        </label>
+                    </div>
+                    {% else %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="CC">
+                        <label class="form-check-label" for="litre_cc">
+                            CC
+                        </label>
+                    </div>
+                    {% endif %}
                 </div>
                 <!-- year of manufacture -->
                 <div class="row">
