--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,18 +25,39 @@
                             <p class="card-text">Colour: {{ vehicle.colour }}</p>
                             <p class="card-text">Year: {{ vehicle.year }}</p>
                             {% if vehicle.current_owner == "yes" %}
-                            <p class="card-text">Current Owner: {{ vehicle.current_owner }}
-                                <i class="fa-solid fa-check"></i>
-                            </p>
+                                <p class="card-text">Current Owner: {{ vehicle.current_owner }}
+                                    <i class="fa-solid fa-check"></i>
+                                </p>
                             {% endif %}
                             <p><em>by: {{ vehicle.created_by }}</em></p>
                             <!-- edit button -->
                             {% if session.user|lower == vehicle.created_by|lower %}
-                            <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" role="button">Edit <i
-                                    class="fa-solid fa-pen"></i></a>
+                                <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}"
+                                   role="button">Edit <i class="fa-solid fa-pen"></i></a>
                             <!-- delete button -->
-                            <a class="btn btn-danger btn-sm" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}"
-                                role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
+                            <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                Delete <i class="fa-regular fa-circle-xmark"></i>
+                            </button>
+                            
+                            <!-- Modal -->
+                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="deleteModal">Delete Vehicle?</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Are You Sure You Want To Delete This Vehicle?</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <a class="btn btn-danger" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}"
+                                                role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             {% endif %}
                         </div>
                     </div>
