--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -20,8 +20,29 @@
                         <a class="btn btn-primary" href="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Edit <i
                                 class="fa-solid fa-pen"></i></a>
                         <!-- delete button -->
-                        <a class="btn btn-danger btn-sm" href="{{ url_for('delete_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Delete <i
-                                class="fa-solid fa-pen"></i></a>
+                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                            Delete <i class="fa-regular fa-circle-xmark"></i>
+                        </button>
+                        
+                        <!-- Modal -->
+                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="deleteModal">Delete Vehicle Type?</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are You Sure You Want To Delete This Vehicle Type?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <a class="btn btn-danger" href="{{ url_for('delete_vehicle_type', vehicle_type_id=vehicle_type._id) }}"
+                                            role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
