--- a/templates/home.html
+++ b/templates/home.html
@@ -24,9 +24,9 @@
         {% for vehicle in vehicles %}
             {% if vehicle.show_my_vehicle == "yes" %}
                 <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img class="card-img-top" src="static/uploads/{{ vehicle.filename }}">
+                    <img class="card-img-top" src="{{ vehicle.image_url }}">
                     <div class="card-body"> 
-                        <p class="card-text">{{ vehicle.filename }}</p>
+                        <p class="card-text">{{ vehicle.image_url }}</p>
                         <p class="card-text">{{ vehicle.description }}</p>
                         <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
                         <h5 class="card-subtitle mb-2 text-body-secondary">{{ vehicle.model }}</h5>
