Tidy code for add_new_vehicle

--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -108,7 +108,7 @@
                         <i class="fa-solid fa-key"></i>
                     </div>
                 </div>
-                <!-- show my car switch -->
+                <!-- show my vehicle switch -->
                 <div class="row">
                     <div class="form-check form-switch">
                         <label class="form-check-label" for="show_my_vehicle">Show My Vehicle</label>
