--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -42,7 +42,7 @@
                         <i class="fa-solid fa-pen"></i>
                         <label for="capacity" class="form-label">Engine Capacity (e.g. 1.8)</label>
                         <input type="number" class="form-control" id="capacity" name="capacity"
-                        min="1" max="9999" step="0.1" value="" required>
+                        min="1" max="9999" step="0.01" value="" required>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre" checked>
@@ -91,29 +91,22 @@
                         <i class="fa-solid fa-car-side"></i>
                     </div>
                 </div>
-                
+                <!-- upload an a photo of vehicle -->
                     <div class="row justify-content-center">
                         <div class="col-lg-12 text-center">
-                           
-                                <h4>Upload A Photo Of Your Vehicle</h4>
-                    
+                            <h4>Upload A Photo Of Your Vehicle</h4>
                         </div>
                         <div class="col-lg-6 text-center">
-                           
-                           
-                                <div class="form-group">
-                                    <label for="image">Choose Image</label>
-                                    <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required />
-                                </div>
-                                <div class="form-group">
-                                    <label for="description">Image Description</label>
-                                    <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
-                                </div>
-                         
+                            <div class="form-group">
+                                <label for="image">Choose Image</label>
+                                <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Image Description</label>
+                                <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
+                            </div>
                         </div>
                     </div>
-               
-             
                 <!-- submit button -->
                 <div class="row">
                     <div class="col-12">
