--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3>Add New Vehicle</h3>
+    <h3 class="page-title">Add New Vehicle</h3>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="{{ url_for('add_new_vehicle') }}" enctype="multipart/form-data">
@@ -107,7 +107,7 @@
                 <!-- submit button -->
                 <div class="row">
                     <div class="col-12">
-                        <button class="btn btn-primary" type="submit">Add Vehicle</button>
+                        <button class="btn add-edit-save-btn" type="submit">Add Vehicle</button>
                     </div>
                 </div>
             </form>
