--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- source = Bootstrap 5.3.1 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" type="text/css">
+    <!-- source = Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" type="text/css">
+    <!-- link to custom css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
@@ -17,9 +20,9 @@
 
     <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar bg-primary text-shadow" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg navbar text-shadow" data-bs-theme="dark" id="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{ url_for('get_vehicles') }}">My Vehicle History</a>
+                <a class="navbar-brand logo" href="{{ url_for('get_vehicles') }}">My Vehicle History</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
