--- a/templates/edit_vehicle_type.html
+++ b/templates/edit_vehicle_type.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3>Edit Vehicle Type</h3>
+    <h3 class="page-title">Edit Vehicle Type</h3>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}">
@@ -17,13 +17,13 @@
                 <!-- save button -->
                 <div class="row">
                     <div class="col-12">
-                        <button class="btn btn-primary" type="submit">Save <i class="fa-regular fa-floppy-disk"></i></button>
+                        <button class="btn add-edit-save-btn" type="submit">Save <i class="fa-regular fa-floppy-disk"></i></button>
                     </div>
                 </div>
                 <!-- cancel button -->
                 <div class="row">
                     <div class="col-12">
-                        <a class="btn btn-danger" href="{{ url_for('get_vehicle_types') }}" role="button">Cancel <i
+                        <a class="btn cancel-delete-btn" href="{{ url_for('get_vehicle_types') }}" role="button">Cancel <i
                         class="fa-regular fa-circle-xmark"></i></a>
                     </div>
                 </div>
