--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     
-    <h3>User's Vehicles</h3>
+    <h3 class="page-title">User's Vehicles</h3>
 
     <div class="row">
         <div class="col-12">
@@ -12,68 +12,73 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <input type="text" class="text" name="query" id="query" placeholder="Search Vehicles" minlength="2" maxlength="50" required>
                         <label for="query"></label>
-                        <button class="btn btn-primary" type="submit">Search <i class="fa-solid fa-magnifying-glass"></i></button>
-                        <a class="btn btn-danger btn-sm" href="{{ url_for('get_vehicles') }}" role="button">Reset</a>
+                        <button class="btn add-edit-save-btn" type="submit">Search <i class="fa-solid fa-magnifying-glass"></i></button>
+                        <a class="btn cancel-delete-btn btn-sm" href="{{ url_for('get_vehicles') }}" role="button">Reset</a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    
-    {% if vehicles|length > 0 %}
-        {% for vehicle in vehicles %}
-            {% if vehicle.show_my_vehicle == "yes" %}
-                <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-                    <img class="card-img-top" src="{{ vehicle.image_url }}">
-                    <div class="card-body"> 
-                        <p class="card-text">{{ vehicle.image_url }}</p>
-                        <p class="card-text">{{ vehicle.description }}</p>
-                        <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
-                        <h5 class="card-subtitle mb-2 text-body-secondary">{{ vehicle.model }}</h5>
-                        <p class="card-text">Engine Capacity: {{ vehicle.capacity }}</p>
-                        <p class="card-text">Litre/CC: {{ vehicle.litre_cc }}</p>
-                        <p class="card-text">Colour: {{ vehicle.colour }}</p>
-                        <p class="card-text">Year: {{ vehicle.year }}</p>
-                        {% if vehicle.current_owner == "yes" %}
-                            <p class="card-text">Current Owner: {{ vehicle.current_owner }}
-                                <i class="fa-solid fa-check"></i>
-                            </p>
-                        {% endif %}
-                        <p><em>by: {{ vehicle.created_by }}</em></p>
-                        <!-- edit button -->
-                        {% if session.user|lower == vehicle.created_by|lower %}
-                            <a class="btn btn-primary" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}"
-                               role="button">Edit <i class="fa-solid fa-pen"></i></a>
-                        <!-- delete button -->
-                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
-                            Delete <i class="fa-regular fa-circle-xmark"></i>
-                        </button>
-                        
-                        <!-- Modal -->
-                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="deleteModal">Delete Vehicle?</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>Are You Sure You Want To Delete This Vehicle?</p>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <a class="btn btn-danger" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}"
-                                            role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
+    <div class="row">
+        {% if vehicles|length > 0 %}
+            {% for vehicle in vehicles %}
+                {% if vehicle.show_my_vehicle == "yes" %}
+                    <div class="col-lg-6">
+                        <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+                            <img class="card-img-top" src="{{ vehicle.image_url }}">
+                            <div class="card-body"> 
+                                <p class="card-text">{{ vehicle.image_url }}</p>
+                                <p class="card-text">{{ vehicle.description }}</p>
+                                <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
+                                <h5 class="card-subtitle">{{ vehicle.model }}</h5>
+                                <p class="card-text">Engine Capacity: {{ vehicle.capacity }}</p>
+                                <p class="card-text">Litre/CC: {{ vehicle.litre_cc }}</p>
+                                <p class="card-text">Colour: {{ vehicle.colour }}</p>
+                                <p class="card-text">Year: {{ vehicle.year }}</p>
+                                {% if vehicle.current_owner == "yes" %}
+                                    <p class="card-text">Current Owner: {{ vehicle.current_owner }}
+                                        <i class="fa-solid fa-check"></i>
+                                    </p>
+                                {% endif %}
+                                <p><em>by: {{ vehicle.created_by }}</em></p>
+                                <!-- edit button -->
+                                {% if session.user|lower == vehicle.created_by|lower %}
+                                    <a class="btn add-edit-save-btn" href="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}"
+                                    role="button">Edit <i class="fa-solid fa-pen"></i></a>
+                                <!-- delete button -->
+                                <button type="button" class="btn cancel-delete-btn btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                    Delete <i class="fa-regular fa-circle-xmark"></i>
+                                </button>
+                                
+                                <!-- Modal -->
+                                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="deleteModal">Delete Vehicle?</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Are You Sure You Want To Delete This Vehicle?</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                <a class="btn cancel-delete-btn" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}"
+                                                    role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
-                        {% endif %}
                     </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    {% else %}
+                {% endif %}
+            {% endfor %}
+        {% else %}
+    </div>
+    
+    
     <h3>No Results Found</h3>
     {% endif %}
 
