--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div class="container">
-        <h3>Register</h3>
+        <h3 class="page-title">Register</h3>
         <div class="row justify-content-center">
             <div class="col-6">
                 <form method="POST" action="{{ url_for('register') }}">
