--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div class="container">
-        <h3>Sign In</h3>
+        <h3 class="page-title">Sign In</h3>
         <div class="row justify-content-center">
             <div class="col-6">
                 <form method="POST" action="{{ url_for('sign_in') }}">
